tests/ui/nll/issue-46023.stderr
error[E0594]: cannot assign to `x`, as it is not declared as mutable
  --> $DIR/issue-46023.rs:5:9
   |
LL |         x = 1;
   |         ^^^^^ cannot assign
   |
help: consider changing this to be mutable
   |
LL |     let mut x = 0;
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
